<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/instructions_text"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grinning_cat"
            android:contentDescription="@string/grinning_cat_descr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_text_cont"
            android:textAlignment="center"
            android:textSize="20sp"
            />
        <Button
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_margin="20dp"
            android:text="@string/back_button"
            android:onClick="backToMainMenu"/>
    </LinearLayout>
</ScrollView>
